Added routes and models for Forum activities

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
-<h2>Home page lol</h2>
-<p>Courses here</p>
+<h2>Web server for MySport android app</h2>
+<p>Right now website does not have any pages except this one and "404 not found page". 
+    Later we gonna deploy web version for our project, right now we have desktop and mobile versions. 
+    Waiting for some teammates to learn layouting in html... <br/> <br/> <b>See you later on our website!</b>
+</p>
