--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
  <nav>
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo">Courses App</a>
+      <a href="/" class="brand-logo">MySport WEB</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         {{#if isHome}}
           <li class="active"><a href="/">Main</a></li>
@@ -9,9 +9,9 @@
         {{/if}} 
 
         {{#if isCourses}}
-          <li class="active"><a href="/courses">Course list</a></li>
+          <li class="active"><a href="/courses">Sports list</a></li>
         {{else}}
-          <li><a href="/courses">Course list</a></li>
+          <li><a href="/courses">Sports list</a></li>
         {{/if}} 
 
         {{#if isContact}}
